# Interactive-Volumetric-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: AlphaBitmap.h.27A3AD1F38A98C96.idx  BaseTypes.h.999BC79CDF3A8652.idx  BitScale.cpp.97EA8256D3C80670.idx  BitScale.h.BFEC79DEA22CE927.idx  BitUtility.h.DF99788314604F12.idx  Bitmap.h.2409375132907488.idx  CodeGen.cpp.3B69B9ED29BEE49B.idx  ColorRgba.h.CDBDCE569C5A05D2.idx  Common.h.43BEDA469008D208.idx  Constant.cpp.7167D30837B3D4D9.idx  ConstantUnion.h.215650C4D9D3F28A.idx  DebugInfo.h.5D37B70048E24554.idx  DirStackFileIncluder.h.B5A0DDB41AC1A305.idx  GLSL.ext.AMD.h.33808259F3A49D46.idx  GLSL.ext.ARM.h.E986629A6411CA11.idx  GLSL.ext.EXT.h.95FAC50DC29EDBF0.idx  GLSL.ext.KHR.h.8E64B6F828852A4C.idx  GLSL.ext.NV.h.665EC1442BEF5B2A.idx  GLSL.ext.QCOM.h.EF0E4EF32B7B7D4D.idx  GLSL.std.450.h.27F055B839A4B5FF.idx  GLSL.std.450.h.3388ACBC28BDA487.idx  GLSL.std.450.h.8FBC5C678E476024.idx  GLSL.std.450.h.DB72D719017D6480.idx  GlslangToSpv.cpp.65A557040EB6AD7C.idx  GlslangToSpv.h.AD27183A3E6D8D36.idx  InReadableOrder.cpp.585D8D817583B731.idx  InfoSink.cpp.ACC7827851BC202D.idx  InfoSink.h.FA62F9A341071EA0.idx  Initialize.cpp.37E1C44F52836666.idx  Initialize.h.1A9858237E4A802B.idx  IntermTraverse.cpp.4B1B69F2C734E2D6.idx  Intermediate.cpp.1A2A1C844E0B4A3E.idx  Interval.h.D6331D080C9389A8.idx  Link.cpp.E9A525ACF52EE484.idx  LiveTraverser.h.D399388E51C24915.idx  Logger.cpp.0103FE6C564EF658.idx  Logger.h.A91596A22F42CD85.idx  Math.hpp.28DAA7DB99A0104D.idx  MortonTable.cpp.536DC7E989FE5EB7.idx  MortonTable.h.F71514DA5C699476.idx  (+1440 more)
app/: CMakeLists.txt  default.fs  main.cpp
apps/: CMakeLists.txt
apps/Interactive-Volumetric-Renderer/: cubes.cpp  fs_cubes.sc  hellobgfx.cpp  main.cpp  test.cpp
assets/shaders/cubes/: vs_cubes.sc
exts/: CMakeLists.txt  imgui.cmake
include/: test.hpp
include/util/: configuration.hpp
include/util/entry/: entry.h
include/util/imgui/: imgui.h
notes/: interactive_fog_DigitalMind.md
src/: CMakeLists.txt  bgfx_utils.cpp  test.cpp
